Finished docs; added a license and a new README

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 TODO:
 
+-Testing!
+-Proofreading!
+-list of commands and aliases to docs
 -inhibit to inhibition?
 -HV PSU to HV generator etc?
 -More functionality to vhv
