Improved the behaviour of connection errors in API

--- a/todo.txt
+++ b/todo.txt
@@ -1,36 +1,66 @@
 TODO:
 
+Changes:
+-changed hvctl-run
+-fixed bugs in __main__
+-added imports to __init__
+
 # Current:
 
 # Essentials:
--rewrite virtualconnection docs
--Better error messages when there is no connection
--Add examples for the use of virtualhv
--Sending a message without connection, connecting, and then sending another message blocks (make unlock the lock if send raises an error?)
--HV PSU to HV generator etc?
--shorten the name of virtualconnection
--virtualconnection/hv inheritance -> composition
--does this work on windows?
--split commands at any whitespace instead of just ' '
--file rights
+- Document imports in __init__
+- API(port) not working causes confusion (use * to force keyword arguments?)
+- rewrite virtualconnection docs
+- Better error messages when there is no connection
+- Sending a message without connection, connecting, and then sending another message blocks (make unlock the lock if send raises an error?)
+- HV PSU to HV generator etc?
+- shorten the name of virtualconnection
+- virtualconnection/hv inheritance -> composition
+- Does this work on windows?
+- Split commands at any whitespace instead of just ' '
+- _poll -> run_poll
 
 # When all else is ready
--Testing!
--Proofreading!
--implement :ref:`name <actual_ref>`-syntax in docs
+- Testing (maybe try mock objects)!
+- Proofreading!
+- implement :ref:`name <actual_ref>`-syntax in docs
 
 # Ask Tomas
--inhibit to inhibition?
--What is inhibition?
--volts vs kilovolts?
+
+- What is inhibit/inhibition?
+Testaa fyysisellä laitteella
+
+- What is fault?
+Ylikuormitus katkaisee outputin, aikaikkunan kuluttua yrittää uudelleen.
+ 
+- What is interlock?
+Monta ehtoa jotta menee päälle. Fyysinen turvakytkin, joka estää menemisen päälle
+
+- Volts vs kilovolts
+volts
+
+- Positive vs negative voltage
+convert to positive
+
+- HV PSU vs HV generator
+HV PS (power supply), HV generator
+
+- Authorship information
+OK
+
+- License (kysy Pekolta)
+
+- File rights
+rw r r hyvä
+
+- serial.SerialException vs RuntimeError
+RuntimeError
+
+- Ugly error message OK?
+OK
 
 # Can be added later
--More functionality to vhv
--try pylint?
--link to external docs
--to_bytes -> __bytes__
-
-# TurboCtl
->>> from functools import singledispatch
-unittest.mock — mock object library
-__main__ module
+- More functionality to VirtualHV
+- Try pyLint?
+- Links to external docs
+- to_bytes -> __bytes__? (Maybe change __init__ into a generic function?)
